Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtube-k8s-app
  labels:
    app: youtube-k8s-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: youtube-k8s-app
  template:
    metadata:
      labels:
        app: youtube-k8s-app
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: youtube-k8s-app
        image: max400/youtube-apps:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 3000
