Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: youtube-k8s-app
  labels:
    app: youtube-k8s-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: youtube-k8s-app
