Kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtube-k8s-app
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:381492139836:certificate/fa79626b-df5e-47fd-af07-480ea745d83d
    alb.ingress.kubernetes.io/ssl-redirect: "443"
spec:
  ingressClassName: alb
  rules:
    - host: www.devopswithmax.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: youtube-k8s-app
                port:
                  number: 80
